<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_1"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/information_text_size"
        android:layout_margin="@dimen/default_margin_top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_2"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/information_text_size"
        android:layout_margin="@dimen/default_margin_top"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_3"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/information_text_size"
        android:layout_margin="@dimen/default_margin_top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_4"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/information_text_size"
        android:layout_margin="@dimen/default_margin_top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_5"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/information_text_size"
        android:layout_margin="@dimen/default_margin_top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_6"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/information_text_size"
        android:layout_margin="@dimen/default_margin_top"/>

</LinearLayout>