<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/default_border"
    android:layout_gravity="center">


    <EditText
        android:id="@+id/taste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/taste"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/aroma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/aroma"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/apperance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apperance"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/bitterness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bitterness"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/beer_comment_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:hint="@string/comment"
        android:gravity="center"
        android:inputType="textMultiLine" />



    <Button
        android:id="@+id/add_review_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/add_review" />


</LinearLayout>