<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/default_border"
    android:layout_gravity="center">


    <EditText
        android:id="@+id/hop_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"

        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/alpha_acid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"

        android:hint="@string/alpha"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"

        android:hint="@string/brew_time"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/add_hop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/add_hop" />

</LinearLayout>