<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/beer_add_id"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/brew_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brew_name"
            />

        <EditText
            android:id="@+id/brew_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brew_time"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/brew_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brew_temperature"
            android:inputType="numberDecimal"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_style"
                android:textSize="@dimen/calculator_text_size"/>

            <Spinner
                android:id="@+id/beer_style_add_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_top"
            tools:listitem="@layout/ingredient_element"
            />

        <Button
            android:id="@+id/add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"
            android:backgroundTint="@color/colorPrimary"
            />

    </LinearLayout>

    <Button
        android:id="@+id/add_beer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="bottom|end"
        android:text="@string/add_brew" />


</androidx.constraintlayout.widget.ConstraintLayout>