<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/default_border"
    android:layout_gravity="center">




        <EditText
            android:id="@+id/ingredient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ingredient_name"
            android:layout_gravity="center"
            android:gravity="center" />

        <EditText
            android:id="@+id/ingredient_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ingredient_amount"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/ingredient_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/brew_time"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="numberDecimal" />

    <Button
        android:id="@+id/add_ingredient_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/add_ingredient" />

</LinearLayout>