<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculators.SugarCalculator"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="@dimen/default_margin_start"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/calculator_text_size"
            android:text="@string/brew_amount" />

        <EditText
            android:id="@+id/sugar_batch_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/calculator_text_size"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="@dimen/default_margin_start"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/calculator_text_size"
            android:text="@string/temperature" />

        <EditText
            android:id="@+id/sugar_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/calculator_text_size"
            android:ems="10"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/beer_style"
            android:textSize="@dimen/calculator_text_size"/>

        <Spinner
            android:id="@+id/beer_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/calculator_result_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/calculator_result_text_size"
                android:textColor="@color/colorPrimary"
                android:text="@string/glucose" />

            <TextView
                android:id="@+id/glucose_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/calculator_result_margin"
                android:textSize="@dimen/calculator_result_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/calculator_result_text_size"
                android:textColor="@color/colorPrimary"
                android:text="@string/sugar" />

            <TextView
                android:id="@+id/sugar_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/calculator_result_margin"
                android:textSize="@dimen/calculator_result_text_size"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:src="@drawable/carbo" />
    </LinearLayout>



</LinearLayout>